Changed text of all buttons to be lowercase to be more estetically pleasing and renamed Log In! to Sign in.

--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -24,7 +24,7 @@
       <ion-label>Remember me</ion-label>
       <ion-checkbox [(ngModel)]="loginInfo.remember" name='remember'></ion-checkbox>
     </ion-item>
-    <button ion-button type="submit" block>Log In!</button>
+    <button ion-button type="submit" block>Sign in</button>
   </form>
   
   <!-- <button ion-button type="submit" (click)="autoLogin()" block>Auto login</button> -->
