Removed unused button and changed from using image of arrow to use ionic font navigation arrow.

--- a/GATEWAY/src/pages/applications/applications.html
+++ b/GATEWAY/src/pages/applications/applications.html
@@ -24,11 +24,10 @@
           <b style="color: white;">{{app._id}}</b>
           <p style="color: white;">Number of virtual TILES: {{app.virtualTiles.length}}</p>
           <p style="color: white;">Environment: {{app.devEnvironment}}</p>
-          <!-- <button right class="bttn" ion-button small color="positive" (click)="viewApplication(app)">View App</button> -->
         </div>
 
         <div class="col col-25">
-          <img src="assets/images/ic_navigate_next.svg" style="width: 42px; height: 42px; float: right;">
+          <ion-icon name="arrow-forward" style="float: right; font-size: 4rem; color: white;"></ion-icon>
         </div>
       </div>
     </ion-item>
