Changed WEBPAGE to TILES Cloud in info message if no tiles are registered.

--- a/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
+++ b/GATEWAY/src/pages/virtual-tiles/virtual-tiles.html
@@ -66,5 +66,5 @@
       </div>
     </ion-item>
   </div>
-<div *ngIf="virtualTiles === undefined ||virtualTiles.length === 0" style="margin: 0 auto; padding: 5px;border-radius: 3px; background-color: white; text-align: center;"><span style="font-size: 16px;">No virtual tiles were found, please register new virtual tiles on WEBPAGE</span></div>
+<div *ngIf="virtualTiles === undefined ||virtualTiles.length === 0" style="margin: 0 auto; padding: 5px;border-radius: 3px; background-color: white; text-align: center;"><span style="font-size: 16px;">No virtual tiles were found, please register new virtual tiles on TILES Cloud</span></div>
 </ion-content>
