--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.html
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.html
@@ -19,19 +19,19 @@
   <ion-list>
     <ion-item color="light" class="devices" *ngFor="let device of devices" no-lines style="background-color: #ffffff; border-radius: 3px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
       <b>{{device.name}}</b>
-      <div class = "row">
+      <div class = "row" style="margin-top: 7px;">
         <div class = "col">
-          <button style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 6px; padding-bottom: 6px; font-size: 0.70em; color: white;">
+          <button (click)="changeNamePop(device)" style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 7px; padding-bottom: 7px; font-size: 0.75em; color: white; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
           Change name
           </button>
         </div>
         <div class = "col">
-          <button style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 6px; padding-bottom: 6px; font-size: 0.70em; color: white;">
+          <button (click)="devicesService.resetDeviceName(device)" style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 7px; padding-bottom: 7px; font-size: 0.75em; color: white; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
           Reset name
           </button>
         </div>
         <div class = "col">
-          <button style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 6px; padding-bottom: 6px; font-size: 0.70em; color: white;">
+          <button (click)="bleService.locate(device)" style="background-color: #488aff; border-radius: 3px; width: 100%; text-align: center; padding-top: 7px; padding-bottom: 7px; font-size: 0.75em; color: white; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
           Locate
           </button>
         </div>
