--- a/GATEWAY/src/pages/dev-term/dev-term.html
+++ b/GATEWAY/src/pages/dev-term/dev-term.html
@@ -4,24 +4,29 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
   <ion-navbar>
     <ion-title style="padding-bottom: 0; margin-bottom: 0;">Developer Terminal</ion-title>
   </ion-navbar>
     <div style="background-color: #f8f8f8; border-bottom: thin solid #cccccc; padding-bottom: 1px; margin-top: 0;">
-    <!-- This is alot. TODO add to scss -->
         <button style="margin-left: 14px; width: 40%; max-height: 29px;" ion-button (click)="scrollBottomOfList(true)">Scroll Bottom</button>
         <button style="float: right; margin-right: 14px; width: 40%; max-height: 29px;" ion-button (click)="clearTerminal()">Clear</button>
     </div>
 </ion-header>
 
-<ion-content>
-    <ion-list>
-      <ion-item class="devices" *ngFor="let message of messages;" no-margin text-wrap>
-        <div>
+<div (click)="scrollBottomOfList(true)" style="position:absolute; bottom: 0; right: 0; margin-bottom: 65px; margin-right: 15px; z-index: 10;">
+  <ion-icon name="arrow-dropdown-circle" item-left style="font-size: 5rem; opacity: 0.3;"></ion-icon>
+</div>
+
+<ion-content style="z-index: 1;">
+    <ion-list style="z-index: 2;">
+      <ion-item class="devices" *ngFor="let message of messages;" no-margin text-wrap style="z-index: 3;">
+        <div style="z-index: 4;">
           <span style="font-size: 12px">{{message.datetime}}</span><br>
           <span>{{message.message}}</span>
         </div>
       </ion-item>
     </ion-list>
 </ion-content>
+
