--- a/GATEWAY/src/pages/login/login.html
+++ b/GATEWAY/src/pages/login/login.html
@@ -10,7 +10,7 @@
   <form (ngSubmit)="loginForm()" #registerForm="ngForm">
     <ion-item>
       <ion-label>Username</ion-label>
-      <ion-input type="text" [(ngModel)]="loginInfo.user" name="username" placeholder='TestUser'></ion-input>
+      <ion-input type="text" [(ngModel)]="loginInfo.user" name="username" placeholder='Username'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Host</ion-label>
